# paravel_theme3

./: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  broadcast_appliance_readme.odt  configure.ac  configure.in  dconf-user  gconf-config.tar  make_slack.in  paravel_support.odt  paravel_theme.spec.in  paravel_theme3.spec.in  rddesktop_init.desktop  rddesktop_init.sh  slack-desc.in  slack_doinst.sh
ksplash/: Makefile.am  Theme.rc
qt/: Makefile.am  qtrc
wallpapers/: Makefile.am
