## automake.am
##
## wallpapers/ automake.am for paravel_theme
##
## Use automake to process this into a Makefile.in
##
##   (C) Copyright 2002-2006,2008 Fred Gleason <fredg@paravelsystems.com>
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##

EXTRA_DIST = Paravel_Axia_RD_black.png\
             Paravel_Axia_RD_red.png\
             Paravel_Axia_RD_white.png\
             Paravel_Black1024a.png\
             Paravel_Black1024b.png\
             Paravel_Black1024rd.png\
             Paravel_Blue.png\
             Paravel_Blue_PS2.png\
             Paravel_Gray1024.png\
             Paravel_rdairplay.png\
             rdairplay_skin.png\
             rdpanel_skin.png

CLEANFILES = *~ *.tar.gz *.tgz *.mo *.rpm *.zip
DISTCLEANFILES = srl_theme.spec
MAINTAINERCLEANFILES = *~ Makefile.in configure aclocal.m4 *.tar.gz\
                       config.guess config.status config.sub install-sh\
                       libtool ltmain.sh missing mkinstalldirs depcomp\
                       srl_theme.spec
